2012-04-13  Mike Frysinger  <vapier@gentoo.org>

  * src/tap/cable/ft2232.c (urj_tap_cable_ft2232_ktlink_driver): Use the
    ft2232h_set_frequency helper since this cable driver has a FT2232H part.
    Fix by Tomek Cedro.

2012-04-10  Mike Frysinger  <vapier@gentoo.org>

  * src/tap/cable/ft2232.c: Declare ARM-USB-OCD-H cable by Jérôme Carretero.
  * src/tap/cable/generic_usbconn_list.h: Add new armusbocd_h cable.

2012-03-10  Mike Frysinger  <vapier@gentoo.org>

  * include/urjtag/cable.h (urj_cable_param_key_t): Add URJ_CABLE_PARAM_KEY_INDEX.
  * include/urjtag/usbconn.h (urj_usbconn_cable_t): Add index.
  * src/tap/cable.c (cable_param): Handle index and URJ_CABLE_PARAM_KEY_INDEX.
  * src/tap/cable/generic_usbconn.c (urj_tap_cable_generic_usbconn_connect):
    Handle URJ_CABLE_PARAM_KEY_INDEX and pass along index.
  * src/tap/cable/generic_usbconn.h: Document new index= parameter.
  * src/tap/usbconn/libftd2xx.c (ftd2xx_param_t): Add index.
    (usbconn_ftd2xx_connect): Pass along index.
  * src/tap/usbconn/libftdi.c (ftdi_param_t): Add index.
    (usbconn_ftdi_connect): Pass along index.
    (usbconn_ftdi_common_open): Call ftdi_usb_open_desc_index to utilize the
    new index parameter.

2012-03-02  Mike Frysinger  <vapier@gentoo.org>

  * src/tap/usbconn/libusb.c, src/tap/usbconn/libusb.h: Glue the 0.1 API
    for library init and device list lookup/freeing to 1.0 so other places
    can use it too.

2012-03-06  Tomek Cedro  <cederom@tlen.pl>

  * src/tap/cable_list.h, src/tap/cable/ft2232.c,
    src/tap/cable/generic_usbconn_list.h: New ft2232 KT-LINK driver.

2012-03-02  Mike Frysinger  <vapier@gentoo.org>

  * src/svf/svf.c (urj_svf_run): Detect unset cables to avoid crashes when
    using the command line interface.  Patch by Scott Tsai.

  * include/urjtag/part.h (urj_part_set_signal_{high,low,input}): Add helpers
    for controlling levels to make code reading easier.  Work by Miklós Márton.
